tests/paczka1/small_fuzzy/94274140.err
Error in line 8: sTljskchvv A162 17,1
Error in line 14: S5 S5 63,9
Error in line 16: S5 S5 209,6
